message-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-ingress
spec:
  rules:
    - host: social.com
      http:
        paths:
          - path: /api/message
            pathType: Prefix
            backend:
              service:
                name: message-service
                port:
                  number: 8081
